--- a/docs/v0.1.0/en/doc/guide/overview.mdx
+++ b/docs/v0.1.0/en/doc/guide/overview.mdx
@@ -41,5 +41,5 @@ GenUI is currently in the early stages of development, and many features are sti
 
 - **GitHub**: [https://github.com/Privoce/GenUI](https://github.com/Privoce/GenUI)
 - **Discord**: [https://discord.gg/jVEJDhE75Y](https://discord.gg/jVEJDhE75Y)
-- **Email**: [syf20020816@outlook.com](mailto:syf20020816@outlook.com)
-- **Collaboration Email**: [han@privoce.com](mailto:han@privoce.com)
+- **Email**: `syf20020816@outlook.com`
+- **Collaboration Email**: `han@privoce.com`
