--- a/docs/v0.1.0/en/doc/guide/tools.mdx
+++ b/docs/v0.1.0/en/doc/guide/tools.mdx
@@ -1,6 +1,6 @@
 import { Badge } from '@theme';
 
-# 工具
+# Tools
 
 ## Ract
 
@@ -8,27 +8,27 @@ import { Badge } from '@theme';
 > 
 > Releases: https://github.com/Privoce/ract/releases
 
-Ract 是一款用 Rust 编写的会话式 CLI 工具，旨在通过提供一体化解决方案来简化开发过程：
+[**Ract**](https://github.com/Privoce/ract)  is a conversational CLI tool written in Rust, designed to simplify the development process by providing an all-in-one solution for:  
 
-- 集成依赖项
-- 设置环境
-- 生成项目模板
-- 运行和打包项目
+- Integrating dependencies  
+- Setting up environments  
+- Generating project templates  
+- Running and packaging projects  
 
-Ract 具有最少的参数和直观的基于对话框的界面，支持 GenUI 和 Makepad 等框架，使您的开发工作流程顺畅高效。 🚀
+With **minimal arguments** and an **intuitive dialog-based interface**, Ract supports frameworks like **GenUI** and **Makepad**, making your development workflow smooth and efficient. 🚀
 
 :::tip
-`Ract`是您开启GenUI之路的第一步，请选择最新的版本进行下载，Ract相关使用请参照教程：[Ract](/zh/doc/tutorial/ract)
+`Ract` is the first step to start GenUI. Please choose the latest version to download. For Ract usage, please refer to the tutorial: [Ract](/zh/doc/tutorial/ract)
 :::
 
-## VSCode 插件 <Badge text="Comming Soon" type="warning" />
+## VSCode plugin <Badge text="Comming Soon" type="warning" />
 
-GenUI的VSCode插件，包括：代码着色，语法支持，图标，AIGC，版本更新，等功能。
+GenUI's VSCode plugin, including: code coloring, syntax support, icons, AIGC, version updates, and other functions.
 
-我们正在积极构建中...
+We are actively building...
 
-## 远程服务 <Badge text="Comming Soon" type="warning" />
+## Remote service <Badge text="Comming Soon" type="warning" />
 
-远程服务，包括远程打包，远程项目构建，AIGC，online code，插件仓库 等（类似V0）
+Remote service, including remote packaging, remote project building, AIGC, online code, plugin warehouse, etc. (similar to V0)
 
-我们正在积极构建中...
+We are actively building...
