--- a/docs/v0.1.0/en/doc/guide/tools.mdx
+++ b/docs/v0.1.0/en/doc/guide/tools.mdx
@@ -18,7 +18,7 @@ import { Badge } from '@theme';
 With **minimal arguments** and an **intuitive dialog-based interface**, Ract supports frameworks like **GenUI** and **Makepad**, making your development workflow smooth and efficient. 🚀
 
 :::tip
-`Ract` is the first step to start GenUI. Please choose the latest version to download. For Ract usage, please refer to the tutorial: [Ract](/zh/doc/tutorial/ract)
+`Ract` is the first step to start GenUI. Please choose the latest version to download. For Ract usage, please refer to the tutorial: [Ract](/doc/tutorial/ract/introduction)
 :::
 
 ## VSCode plugin <Badge text="Comming Soon" type="warning" />
