--- a/docs/v0.1.0/en/doc/tutorial/quick-start.mdx
+++ b/docs/v0.1.0/en/doc/tutorial/quick-start.mdx
@@ -79,12 +79,12 @@ Ract will prompt you that the relevant tool chain is missing. If your tool chain
 > [!TIP]
 >
 > If you are a novice, you may need to install:
-> - rustc, git, makepad
+> - rustc
 > - git
 > - makepad
-> - gen_components
-> - wasm_build
-> - default
+>   - gen_components
+>   - wasm_build
+>   - default
 >
 > All you have to do is select the installation items
 
