--- a/docs/v0.1.0/en/doc/tutorial/quick-start.mdx
+++ b/docs/v0.1.0/en/doc/tutorial/quick-start.mdx
@@ -9,7 +9,7 @@ This is a quick start example, through which you can quickly understand the deve
 |Name|Version|
 |--|--|
 |Mac|-|
-|Ract|0.1.0|
+|Ract|0.1.0+|
 
 > [!TIP]
 >
