--- a/docs/v0.1.0/zh/doc/tutorial/ract/common_commands.mdx
+++ b/docs/v0.1.0/zh/doc/tutorial/ract/common_commands.mdx
@@ -30,8 +30,8 @@ ract init
 ## `check` - 检查工具链
 
 检查是否安装了所需的工具和依赖项。选项包括：
-- **Basic**：[cargo、rustc、git]
-- **Underlayer**：[makepad (gen_ui、makepad)]
+- **Basic**：`[cargo、rustc、git]`
+- **Underlayer**：`[makepad (gen_ui、makepad)]`
 - **All**：结合基本工具和底层工具。
 
 ```bash
