--- a/docs/v0.1.0/zh/doc/tutorial/quick-start.mdx
+++ b/docs/v0.1.0/zh/doc/tutorial/quick-start.mdx
@@ -9,7 +9,7 @@ import { Tab, Tabs } from 'rspress/theme';
 |名称|版本|
 |--|--|
 |Mac|-|
-|Ract|0.1.0|
+|Ract|0.1.0+|
 
 > [!TIP]
 >
@@ -20,18 +20,25 @@ import { Tab, Tabs } from 'rspress/theme';
 `Ract`是您开启GenUI之路的第一步，请选择最新的版本进行下载
 
 > Releases: https://github.com/Privoce/ract/releases
+>
+> cratio: https://crates.io/crates/ract
 
 ### 配置
 
 > [!WARNING]
 > 
 > 您的计算机可能会提示安全问题，请选择允许
->
-> 当前Windows系统的打包问题尚未解决
 
 您可以通过以下方式将 ract 配置为全局命令：
 
 <Tabs>
+    <Tab label="cargo">
+    ```shell
+    cargo install ract
+
+    ract --version
+    ```
+    </Tab>
     <Tab label="Macos | Linux">
         ```shell
         # copy download ract to /usr/local/bin
@@ -47,17 +54,32 @@ import { Tab, Tabs } from 'rspress/theme';
         # echo to .zshrc
         echo 'export PATH="/usr/local/bin/ract:$PATH"' >> ~/.zshrc
 
+        # fresh zshrc
         source ~/.zshrc
+
         # get version
         ract --version
         ```
     </Tab>
     <Tab label="Windows">
-        ```
-        您只需将Ract设置到环境变量中即可
+        ### 下载并将修改名称
+        
+        当您完成下载后请将`ract_windows_gnu.exe`放置到某个目录中并修改名称为`ract.exe`
+
+        ### 设置Ract到环境变量
+        进入系统环境变量选择`Path`并新增一条`ract.exe`所在的目录地址
+
+        例如：ract的地址为`E://ract/ract.exe`，那么新增的环境变量地址为`E://ract`或`E:\ract`
+        ![](/ract/windows_env.png)
+
+        设置完成后进入`powershell`，输入`ract`相关命令进行验证
+        
+        ```shell
+        ract --version
         ```
     </Tab>
 </Tabs>
+
 
 ### 使用说明
 
