--- a/docs/v0.1.0/zh/doc/config/env.mdx
+++ b/docs/v0.1.0/zh/doc/config/env.mdx
@@ -83,10 +83,10 @@ makepad-widgets = "~/.cargo/bin/chain/makepad"
 gen_components = "~/.cargo/bin/chain/gen_components"
 ```
 
-|key|value type|example|
+|key|value type|description|
 |---|-----|---|
-|`makepad-widgets`|`String`|`"~/.cargo/bin/chain/makepad"`|
-|`gen_components`|`String`|`"~/.cargo/bin/chain/gen_components"`|
+|`makepad-widgets`|`String`|`makepad-widgets`的依赖地址|
+|`gen_components`|`String`|`gen_components`(GenUI Builtin Components)的依赖地址|
 
 ### 修改配置
 
