--- a/docs/v0.1.0/zh/doc/config/ract_toml.mdx
+++ b/docs/v0.1.0/zh/doc/config/ract_toml.mdx
@@ -1,3 +1,66 @@
+import { Tab, Tabs } from 'rspress/theme';
+
 # Ract toml (.ract)
 
-这个文件是`Ract`的配置文件
+`.ract`是`Ract`编译器的配置文件，它使用`toml`格式。该文件能够让Ract辨别当前项目类型和编译对象。
+
+## 配置示例
+
+<Tabs>
+    <Tab label="GenUI">
+        ```toml title=".ract"
+        target = "gen_ui"
+        members = [{ source = "start", target = "src_gen_0" }]
+        ```
+    </Tab>
+    <Tab label="Makepad Project">
+        ```toml title=".ract"
+        target = "makepad"
+        ```
+    </Tab>
+    <Tab label="Makepad Workspace">
+        ```toml title=".ract"
+        target = "makepad"
+        ```
+    </Tab>
+</Tabs>
+
+## 配置说明 
+
+|key|value type|description|
+|---|-----|---|
+|`target`|`FrameworkType`|项目类型|
+|`members`|`Option<Vec<Member>>`|项目成员|
+|`compiles`|`Option<Vec<usize>>`|需要编译的项目，如果未设置，则编译成员中的第一个项目|
+
+> - [`FrameworkType`](/zh/doc/config/types#frameworktype)
+> - [`Member`](/zh/doc/config/types/#member)
+
+### .ract源码
+
+```rust
+/// # RactToml
+/// each project has a .ract file to point the project kind and help ract to compile the project
+///
+/// **try support makepad and gen_ui**
+/// ## Example
+/// ```toml
+/// target = "gen_ui"
+/// members = [
+///    { source = "./hello", target = "./hello_makepad" },
+/// ]
+/// compiles = [0]
+/// ```
+#[derive(Debug, Clone)]
+pub struct RactToml {
+    /// target of the project
+    pub target: FrameworkType,
+    /// members of the project
+    pub members: Option<Vec<Member>>,
+    /// projects to compile, if not set, compile the first project in the members
+    /// - if compiles length is 0, not compile any project
+    /// - if compiles length is 1, compile the project in the members by index
+    /// - if compiles length is more than 1, use multiple threads to compile the projects
+    pub compiles: Option<Vec<usize>>,
+}
+```
