--- a/docs/v0.1.0/zh/doc/config/ract_toml.mdx
+++ b/docs/v0.1.0/zh/doc/config/ract_toml.mdx
@@ -34,7 +34,7 @@ import { Tab, Tabs } from 'rspress/theme';
 |`compiles`|`Option<Vec<usize>>`|需要编译的项目，如果未设置，则编译成员中的第一个项目|
 
 > - [`FrameworkType`](/zh/doc/config/types#frameworktype)
-> - [`Member`](/zh/doc/config/types/#member)
+> - [`Member`](/zh/doc/config/types#member)
 
 ### .ract源码
 
