move react to tool

--- a/docs/v0.1.0/zh/doc/guide/overview.mdx
+++ b/docs/v0.1.0/zh/doc/guide/overview.mdx
@@ -17,10 +17,22 @@ import Container from "@theme/components/Container";
         description="教程模块是您开启 GenUI 之旅的起点。从环境配置到工具下载，从基础语法到快速入门，我们通过一系列简单易懂的示例，逐步引导您深入了解 GenUI 的核心功能。通过这些教程，您不仅能够掌握基本操作，还能通过实践项目进一步巩固所学知识。"
     />
 </Container>
+<Container>
+    <MyLinkCard
+        href="/doc/config/overview"
+        title="配置"
+        description="在配置部分我们会详细说明每个配置文件具体的信息和可配置的条目。"
+    />
+    <MyLinkCard
+        href="/doc/components/overview"
+        title="组件"
+        description="对GenUI Builtin Components的文档，它提供了GenUI项目的所有内置组件，我们希望将其打造成一个现代化的组件库。"
+    />
+</Container>
 
 <Container>
     <MyLinkCard
-        href="/tool"
+        href="/tool/overview"
         title="工具"
         description="GenUI 提供了一体化构建工具 Ract，它专为 GenUI 设计，能够大幅提升开发效率。通过 Ract，您可以轻松实现项目的快速搭建、代码优化以及自动化部署。此外，我们还计划推出 VSCode 插件，进一步完善开发体验（即将上线）。"
     />
