--- a/docs/v0.1.0/zh/doc/guide/tools.mdx
+++ b/docs/v0.1.0/zh/doc/guide/tools.mdx
@@ -2,6 +2,10 @@ import { Badge } from '@theme';
 
 # 工具
 
+> [!TIP]
+>
+> 详细工具文档请参考: [工具](zh/tools/overview)
+
 ## Ract
 
 > Github: https://github.com/Privoce/ract
