--- a/docs/v0.1.0/zh/doc/components/quick-start.mdx
+++ b/docs/v0.1.0/zh/doc/components/quick-start.mdx
@@ -2,9 +2,106 @@
 
 本文档将讲述如何将`GenUI Builtin Components`使用与`GenUI`项目，我们会提供为每个组件提供易懂的使用文档。
 
+> [!TIP]
+>
+> 您可能对其中使用的数据类型的写法并不了解，请参照: [数据](/zh/doc/data/value)
+>
+> 在这个文档中我们只会象征性的介绍`label`和`button`组件，若您想要学习更多组件请参照：[组件](/zh/components/overview)
 ## `label` 文本组件
 
-## `view` 视图组件
+`label`组件是一个可自定义的标签小部件，具有动画和事件处理功能。它允许通过各种属性、动画和事件进行悬停、聚焦和文本样式设置。
+
+### 示例
+
+```rust
+<label 
+    text="'Hello World'" 
+    font_size="16.0" 
+    color="#FFF">
+</label>
+```
+
+### 属性
+
+下面是根据你提供的 `Props` 枚举生成的文档表格，格式如下：
+
+| 名称                  | 说明            | 类型              |
+|-----------------------|-----------------|-------------------|
+| `Theme`              | 主题            | `Themes`          |
+| `Color`              | 颜色            | `MakepadColor`    |
+| `StrokeHoverColor`   | 悬停时字体颜色    | `MakepadColor`    |
+| `StrokeFocusColor`   | 获取焦点时字体颜色    | `MakepadColor`    |
+| `FontSize`           | 字体大小        | `F64`             |
+| `Cursor`             | 鼠标光标        | `MouseCursor`     |
+| `LineSpacing`        | 行间距          | `F64`             |
+| `HeightFactor`       | 高度因子        | `F64`             |
+| `Wrap`               | 文本换行方式    | `TextWrap`        |
+| `FontFamily`         | 字体类型        | `LiveDependency`  |
+| `Visible`            | 是否可见        | `bool`            |
+| `Height`             | 高度            | `Size`            |
+| `Width`              | 宽度            | `Size`            |
+| `Margin`             | 外边距          | `Margin`          |
+| `Padding`            | 内边距          | `Padding`         |
+| `Align`              | 对齐方式        | `Align`           |
+| `Text`               | 文本内容        | `String`          |
+| `AnimationKey`       | 是否允许动画          | `bool`            |
+| `EventKey`           | 是否允许事件          | `bool`            |
+| `GrabKeyFocus`       | 是否捕获键焦点      | `bool`            |
+
+
+### 事件回调
+
+| 名称         | 说明            | 参数                 |
+|--------------|-----------------|----------------------|
+| `hover_in`   | 鼠标进入事件     | `GLabelHoverParam`   |
+| `hover_out`  | 鼠标离开事件     | `GLabelHoverParam`   |
+| `focus`      | 获取焦点事件     | `GLabelFocusParam`   |
+| `focus_lost` | 失去焦点事件     | `GLabelFocusLostParam` |
 
 
 ## `button` 按钮组件
+
+专为交互式 UI 元素设计的可自定义按钮。它支持悬停、聚焦和点击动画，并具有各种可配置的外观属性，包括背景颜色、阴影和边框样式。
+
+### 属性
+
+| 名称                  | 说明                 | 类型             |
+|-----------------------|----------------------|------------------|
+| `theme`              | 主题                 | `Themes`         |
+| `background_color`   | 背景颜色             | `MakepadColor`   |
+| `background_visible` | 背景是否可见         | `bool`           |
+| `hover_color`        | 悬停颜色             | `MakepadColor`   |
+| `focus_color`        | 聚焦颜色             | `MakepadColor`   |
+| `shadow_color`       | 阴影颜色             | `MakepadColor`   |
+| `spread_radius`      | 阴影扩展半径         | `F32`            |
+| `blur_radius`        | 阴影模糊半径         | `F32`            |
+| `shadow_offset`      | 阴影偏移             | `Vec2`           |
+| `border_color`       | 边框颜色             | `MakepadColor`   |
+| `border_width`       | 边框宽度             | `F32`            |
+| `border_radius`      | 边框圆角半径         | `F32`            |
+| `cursor`             | 鼠标指针             | `MouseCursor`    |
+| `visible`            | 是否可见             | `bool`           |
+| `grab_key_focus`     | 是否捕获键盘焦点     | `bool`           |
+| `animation_key`      | 动画键               | `bool`           |
+| `event_key`          | 事件键               | `bool`           |
+| `abs_pos`   | 绝对位置             | `DVec2`    |
+| `margin`    | 外边距               | `Margin`   |
+| `width`     | 宽度                 | `Size`     |
+| `height`    | 高度                 | `Size`     |
+| `scroll`   | 滚动偏移             | `DVec2`      |
+| `clip_x`   | 是否裁剪 X 轴         | `bool`       |
+| `clip_y`   | 是否裁剪 Y 轴         | `bool`       |
+| `padding`  | 内边距               | `Padding`    |
+| `align`    | 对齐方式             | `Align`      |
+| `flow`     | 流动方式             | `Flow`       |
+| `spacing`  | 间距                 | `F64`        |
+
+### 事件回调
+
+| 名称         | 说明             | 参数                  |
+|--------------|------------------|-----------------------|
+| `hover_in`   | 鼠标进入事件     | `GButtonHoverParam`   |
+| `hover_out`  | 鼠标离开事件     | `GButtonHoverParam`   |
+| `clicked`    | 点击事件         | `GButtonClickedParam` |
+| `focus`      | 获取焦点事件     | `GButtonFocusParam`   |
+| `focus_lost` | 失去焦点事件     | `GButtonFocusLostParam` |
