--- a/docs/v0.1.0/zh/doc/components/overview.mdx
+++ b/docs/v0.1.0/zh/doc/components/overview.mdx
@@ -2,7 +2,7 @@
 
 > [!TIP]
 >
-> 对于内置组件库的具体文档请参考: [组件](/zh/components/overview)
+> 对于内置组件库的具体文档请参考: [组件](/zh/components/index)
 > 
 > 本系列文档只讲述在GenUI项目中简单的使用
 
