--- a/docs/v0.1.0/zh/doc/components/quick-start.mdx
+++ b/docs/v0.1.0/zh/doc/components/quick-start.mdx
@@ -4,9 +4,9 @@
 
 > [!TIP]
 >
-> 您可能对其中使用的数据类型的写法并不了解，请参照: [数据](/zh/doc/data/value)
+> 您可能对其中使用的数据类型的写法并不了解，请参照: [数据](/zh/doc/tutorial/data)
 >
-> 在这个文档中我们只会象征性的介绍`label`和`button`组件，若您想要学习更多组件请参照：[组件](/zh/components/overview)
+> 在这个文档中我们只会象征性的介绍`label`和`button`组件，若您想要学习更多组件请参照：[组件](/zh/components/index)
 ## `label` 文本组件
 
 `label`组件是一个可自定义的标签小部件，具有动画和事件处理功能。它允许通过各种属性、动画和事件进行悬停、聚焦和文本样式设置。
