--- a/docs/v0.1.0/zh/doc/tutorial/style.mdx
+++ b/docs/v0.1.0/zh/doc/tutorial/style.mdx
@@ -4,7 +4,21 @@
 
 属性部分会在编译期间合并到组件中，通过`id`或`class`进行索引。
 
-### 使用`<style>`
+## 语法
+
+```html
+<style>
+    $($($style_ident{
+        $prop_key: $prop_value;
+    })*)?
+</style>
+```
+
+> - `$style_ident`：属性标识(`id`或`class`)
+> - `$prop_key`：属性
+> - `$prop_value`：属性值
+
+## 使用`<style>`
 
 ```html
 <template>
@@ -27,7 +41,7 @@
 </style>
 ```
 
-### 索引原则
+## 索引原则
 
 在`<style>`中通过
 
@@ -35,7 +49,7 @@
 - `.`索引组件`class`
 - 支持并建议进行嵌套
 
-### 权重原则
+## 权重原则
 
 属性的权重原则很简单，嵌套越深权重值越大，权重值越大，属性优先级越高。
 
@@ -56,7 +70,7 @@
 
 在上面的例子中有两个`.my_label`，其中 2️⃣ 比 1️⃣ 的权重值更大，优先级更高，因此当它们有相同属性`color`时，采用了`color: #f4b177;`，也就是优先级更高的。
 
-### 合并原则
+## 合并原则
 
 属性的合并原则适用于`class`，当有多个同名`class`时这些`class`中的属性会合并为一个`class`并也遵守权重原则。
 
