--- a/docs/v0.1.0/zh/doc/tutorial/template/basic.mdx
+++ b/docs/v0.1.0/zh/doc/tutorial/template/basic.mdx
@@ -107,7 +107,7 @@ import { Tab, Tabs } from 'rspress/theme';
 
 > [!TIP]
 >
-> 属性值的类型请参考: [数据类型](/zh/doc/data/value)
+> 属性值的类型请参考: [数据类型](/zh/doc/tutorial/data)
 
 #### id
 
