--- a/docs/v0.1.0/zh/doc/tutorial/template/template_type.mdx
+++ b/docs/v0.1.0/zh/doc/tutorial/template/template_type.mdx
@@ -4,7 +4,7 @@
 
 ## 静态组件
 
-静态组件指的是在开发时直接可以使用到的无需自己进行二次开发的底层组件，这些底层组件由[GenUI Builtin Components](/zh/components/overview)提供。
+静态组件指的是在开发时直接可以使用到的无需自己进行二次开发的底层组件，这些底层组件由[GenUI Builtin Components](/zh/components/index)提供。
 
 所有静态组件的属性和回调都是不可更改的并且带有内置类型
 
