--- a/docs/v0.1.0/zh/doc/components/quick-start.mdx
+++ b/docs/v0.1.0/zh/doc/components/quick-start.mdx
@@ -13,7 +13,7 @@
 
 ### 示例
 
-```rust
+```html
 <label 
     text="'Hello World'" 
     font_size="16.0" 
@@ -23,30 +23,28 @@
 
 ### 属性
 
-下面是根据你提供的 `Props` 枚举生成的文档表格，格式如下：
-
 | 名称                  | 说明            | 类型              |
 |-----------------------|-----------------|-------------------|
-| `Theme`              | 主题            | `Themes`          |
-| `Color`              | 颜色            | `MakepadColor`    |
-| `StrokeHoverColor`   | 悬停时字体颜色    | `MakepadColor`    |
-| `StrokeFocusColor`   | 获取焦点时字体颜色    | `MakepadColor`    |
-| `FontSize`           | 字体大小        | `F64`             |
-| `Cursor`             | 鼠标光标        | `MouseCursor`     |
-| `LineSpacing`        | 行间距          | `F64`             |
-| `HeightFactor`       | 高度因子        | `F64`             |
-| `Wrap`               | 文本换行方式    | `TextWrap`        |
-| `FontFamily`         | 字体类型        | `LiveDependency`  |
-| `Visible`            | 是否可见        | `bool`            |
-| `Height`             | 高度            | `Size`            |
-| `Width`              | 宽度            | `Size`            |
-| `Margin`             | 外边距          | `Margin`          |
-| `Padding`            | 内边距          | `Padding`         |
-| `Align`              | 对齐方式        | `Align`           |
-| `Text`               | 文本内容        | `String`          |
-| `AnimationKey`       | 是否允许动画          | `bool`            |
-| `EventKey`           | 是否允许事件          | `bool`            |
-| `GrabKeyFocus`       | 是否捕获键焦点      | `bool`            |
+| `theme`              | 主题            | `Themes`          |
+| `color`              | 颜色            | `MakepadColor`    |
+| `stroke_hover_color`   | 悬停时字体颜色    | `MakepadColor`    |
+| `stroke_focus_color`   | 获取焦点时字体颜色    | `MakepadColor`    |
+| `font_size`           | 字体大小        | `F64`             |
+| `cursor`             | 鼠标光标        | `MouseCursor`     |
+| `line_spacing`        | 行间距          | `F64`             |
+| `height_factor`       | 高度因子        | `F64`             |
+| `wrap`               | 文本换行方式    | `TextWrap`        |
+| `font_family`         | 字体类型        | `LiveDependency`  |
+| `visible`            | 是否可见        | `bool`            |
+| `height`             | 高度            | `Size`            |
+| `width`              | 宽度            | `Size`            |
+| `margin`             | 外边距          | `Margin`          |
+| `padding`            | 内边距          | `Padding`         |
+| `align`              | 对齐方式        | `Align`           |
+| `text`               | 文本内容        | `String`          |
+| `animation_key`       | 是否允许动画          | `bool`            |
+| `event_key`           | 是否允许事件          | `bool`            |
+| `grabKey_focus`       | 是否捕获键焦点      | `bool`            |
 
 
 ### 事件回调
