--- a/docs/v0.1.0/zh/doc/tutorial/template/basic.mdx
+++ b/docs/v0.1.0/zh/doc/tutorial/template/basic.mdx
@@ -134,6 +134,12 @@ import { Tab, Tabs } from 'rspress/theme';
 <label class="[common_label, bold_label, font_smaller]"></label>
 ```
 
+#### `as_prop`属性组件
+
+`as_prop`属性会把某个组件转为其父组件的属性，源自于`Makepad`中构建插槽的一种方式
+
+目前仅在`button`和`view`组件中涉及
+
 ### 绑定属性
 
 对于需要绑定的属性使用`:`作为属性的前缀，属性值为`Bind::Ident`类型，写法如下：
